--- a/Eredmel Specification/Eredmel_Specification.tex
+++ b/Eredmel Specification/Eredmel_Specification.tex
@@ -27,11 +27,11 @@
 While Eredmel is interpreted, there is a preprocessor that acts as a compiler and produces a \code{.edc} file.
 \subsection{Replacement Statements}
 \codeblock{
-replace <regex>\\
+replace <enregex>\\
 \indt<replacement>}
-The use of regex inputs means that replacement macroes do not need to have matched parentheses. If there are multiple lines, each line after the first will be assigned an indentation level of $(\mbox{Original indentation level}) - 1 + (\mbox{Regex match's first line's indentation level})$. The Eredmel Interpreter should go through each regex match and replace it with the given replacement text.
+If there are multiple lines, each line after the first will be assigned an indentation level of $(\mbox{Original indentation level}) - 1 + (\mbox{Regex match's first line's indentation level})$. The Eredmel Interpreter should go through each regex match and replace it with the given replacement text.
 
-Replacement statements may only be placed at the beginning of an Enregex source file, and are evaluated before the rest of the file is interpreted in a top-down manner.
+Replacement statements may only be placed at the beginning of an Eredmel source file, and are evaluated before the rest of the file is interpreted in a top-down manner.
 \subsection{Import Statements}
 \codeblock{import <filepath>}
 The Eredmel Interpeter reads the given file and loads all Replacement Statements, Native Macro Definition Statements, and Macro Definition Statements.
