Signed-off-by: kavi <kavi@globalmbox.com>

--- a/Eredmel Specification/Eredmel_Specification_1_0.tex
+++ b/Eredmel Specification/Eredmel_Specification_1_0.tex
@@ -3,7 +3,7 @@
 \usepackage{xcolor}
 \usepackage{textcomp}
 
-\newcommand\code\texttt
+\newcommand{\code}{\texttt}
 \newcommand{\codebox}[1]{\leavevmode\colorbox{black}{\textcolor{white}{\code{#1}}}}
 \newcommand{\bak}{\textbackslash}
 \newcommand{\til}{$\sim$}
